added assets folder

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <br>
     <br>
     <br>
-    <img src = "C:\ElevenFiftyProjects\HTMLCSSPreWork\3-assets\dovesFlying.jpg" width= "300" height= "300">
+    <img src = "Assets/dovesFlying.jpg" width= "300" height= "300">
 </body>
 
 
