--- a/index.html
+++ b/index.html
@@ -13,31 +13,24 @@
     </nav>
     <br>
 
-<h1<form type = "reGistration">Registration Form</form></h1><br><br>
-
+<h1
+    <form type = "reGistration">Registration Form</form>
+</h1>
 
 <body>
-    <label type = "eMail">Email:</label>
+    
+    <ul><label for = "email">Email:</label></ul>
+    <ul><input type = "text" id = "eMail" name="eMail"></ul>
+    <ul><label for = "userName">Username:</label></ul>
+    <ul><input type = "text" id = "userName" name="userName"></ul>
+    <ul><label for = "password">Password:</label></ul>
+    <ul><input type = "password" id="password" name = "password"></ul>
+    <ul><label for = "password">Confirm Password:</label></ul>
+    <ul><input type = "password" id = "password" name="password"><br></ul>
+    <ul><input type = "submit"></ul>
     <br>
-    <input type = "text" id = "eMail" name="eMail">
-    <br>
-    <label for = "userName">Username:</label><br>
-    <input type = "text" id = "userName" name="userName">
-    <br>
-    <label for = "password">Password:</label>
-    <br>
-    <input type = "password" id="password" name = "password">
-    <br>
-    <label for = "password">Confirm Password:</label>
-    <br>
-    <input type = "password" id = "password" name="password"><br>
-    <br>
-    <input type = "submit">
-    <br>
-    <br>
-    <br>
-    <img src = "Assets/dovesFlying.jpg" width= "300" height= "300">
+    <ul><img src = "Assets/dovesFlying.jpg" width= "300" height= "300"></ul>
+
 </body>
-
-
+ 
 </html>
